--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "postcss-normalize-charset": "^5.0.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
